--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "coffeebeans-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "",
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "daisyui": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
